build: even more unit test for core + bug fixing
- fix awful type cast on ValueFactory
- fix duration parsing precision